--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -31,8 +31,4 @@
 
 [[constraint]]
   name = "go.mongodb.org/mongo-driver"
-  version = "~1.0.0"
-
-[[constraint]]
-  name = "github.com/mongodb/mongo-go-driver"
-  version = "0.3.0"
+  version = "1.0.0-rc1"
