--- a/config.json
+++ b/config.json
@@ -2,5 +2,9 @@
     "Address"        : "0.0.0.0:8080",
     "ReadTimeout"    : 10,
     "WriteTimeout"   : 600,
-    "Static"         : "public"
+    "Static"         : "public",
+    "MongoServerAddress" : "127.0.0.1",
+    "MongoUsername": "admin",
+    "MongoPassword": "password",
+    "MongoDatabaseName" : "cherry"
   }
