--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -32,3 +32,7 @@
 [[constraint]]
   name = "github.com/gorilla/sessions"
   version = "1.2.0"
+
+[[constraint]]
+  name = "github.com/mattn/go-sqlite3"
+  version = "1.11.0"
